Adjust main grid values to fix spacing issue

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ h2 {
 
 main {
   display: grid;
-  grid-template-rows: 150px auto auto;
+  grid-template-rows: 150px auto 80px 40px 1fr;
   min-height: 100vh;
   padding: 0 360px;
 }
@@ -269,8 +269,6 @@ span {
   display: none;
   justify-content: center;
 }
-
-/* Placeholder article */
 
 #placeholder-article {
   height: 300px;
